.config/waybar/style.css
/* Colors */
@define-color waybar-bg #121212;
@define-color waybar-fg #333333;
@define-color waybar-border #718096;
@define-color waybar-text #e0e0e0;
@define-color waybar-critical #f53c3c;

* {
  font-family: 'Noto Sans Mono', 'Font Awesome 6 Free', 'Font Awesome 6 Brands', monospace;
  font-size: 17px;
  min-height: 0;
  border-radius: 0;
  border: none;
}

window#waybar {
  background: @waybar-bg;
}

tooltip {
  background: @waybar-bg;
  border: 2px solid @waybar-border;
}

tooltip label {
  color: @waybar-text;
}

#workspaces button {
  padding: 0 3px;
  color: @waybar-text;
}

#workspaces button.focused {
  background-color: @waybar-fg;
}

#clock,
#battery,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#pulseaudio,
#tray,
#privacy,
#idle_inhibitor,
#scratchpad {
  color: @waybar-text;
  margin: 2px;
  padding: 0px 5px;
}

#mode {
  color: @waybar-critical;
  margin: 2px;
  padding: 0px 5px;
}

#battery.critical:not(.charging) {
  color: @waybar-critical;
}

#privacy {
  color: @waybar-critical;
}

#network.disconnected {
  color: @waybar-critical;
}

#temperature.critical {
  color: @waybar-critical;
}

